<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addClassScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".ui.fragment.profile.AddClassFragment">

        <TextView
            android:id="@+id/addClassTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_sans_bold"
            android:paddingTop="25dp"
            android:text="@string/title_class_creation"
            android:textAlignment="center"
            android:textColor="@color/secondaryColor"
            android:textSize="40sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/course_class_creation"
            android:paddingTop="35dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconContentDescription="Course icon for class"
            app:startIconDrawable="@drawable/ic_book_open_page_variant">

            <EditText
                android:id="@+id/courseClassInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                tools:ignore="Autofill,Deprecated,LabelFor,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/room_class_creation"
            android:paddingTop="35dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconContentDescription="Course icon for class"
            app:startIconDrawable="@drawable/ic_table_chair">

            <EditText
                android:id="@+id/roomClassInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                tools:ignore="Autofill,Deprecated,LabelFor,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/selectDayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_sans_bold"
            android:paddingTop="40dp"
            android:text="@string/day_class_creation"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="15sp" />

        <ca.antonious.materialdaypicker.MaterialDayPicker
            android:id="@+id/dayPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            app:selectionMode="ca.antonious.materialdaypicker.SingleSelectionMode" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/startText"
                style="@style/IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/start"
                android:textSize="11sp" />

            <NumberPicker
                android:id="@+id/startTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/startText"
                android:clickable="true" />

            <TextView
                android:id="@+id/endText"
                style="@style/IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@id/startTimePicker"
                android:text="@string/end"
                android:textSize="11sp" />

            <NumberPicker
                android:id="@+id/endTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/endText"
                android:clickable="true" />
        </RelativeLayout>

        <Button
            android:id="@+id/doneButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/done_button_text"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>