...
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/classname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/pt_sans_bold"
            android:lines="1"
            android:textSize="20sp"
...
            android:fontFamily="@font/pt_sans"
            android:lines="1"
            android:textSize="16sp"
            tools:text="Teacher" />

        <TextView
            android:id="@+id/room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:alpha="0.7"
            android:ellipsize="end"
            android:fontFamily="@font/pt_sans"
...
